# TinyMPC-ADMM

./: .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt  bicycle_3d_example.c  bicycle_5d_example.c  quadrotor.c  quadrotor.h  quadrotor_dt_example.cpp  quadrotor_example copy.c  quadrotor_example copy.cpp  quadrotor_example.c  quadrotor_example.cpp  quadrotor_state_example.cpp  quadrotor_track_example.c  quadrotor_track_example.cpp  quadrotor_track_pos_example.c  quadrotor_track_pos_example.cpp  quadrotor_track_pos_example1.cpp
examples/data/: bicycle3d_track.h  traj_fig8.h  traj_pos_fig8.h
ext/Eigen/: Eigen.h
ext/Eigen/Eigen/src/Core/: CoreEvaluators.h  Matrix.h
ext/Eigen/Eigen/src/Core/util/: Memory.h
src/tinympc/: CMakeLists.txt  admm.c  admm.cpp  admm.h  al_lqr.c  al_lqr.h  auxil.c  auxil.cpp  auxil.h  constants.h  constraint_linear.c  constraint_linear.cpp  constraint_linear.h  cost_lqr.c  cost_lqr.cpp  cost_lqr.h  lqr.c  lqr.cpp  lqr.h  model.c  model.cpp  model.h  tinympc.h  types.h  utils.c  utils.cpp  utils.h
tests/simpletest/: CMakeLists.txt  simpletest.cpp  simpletest.h
tests/src/: CMakeLists.txt  admm_lti_test.c  admm_test.c  al_lqr_lti_test.c  al_lqr_ltv_test.c  back_pass_test.c  bicycle_5d.c  bicycle_5d.cpp  bicycle_5d.h  cost_test.c  eigen_test.c  eigen_test.cpp  forward_pass_test.c  linear_cstr_test.c  lqr_lti_test.c  lqr_lti_track_test.c  lqr_ltv_test.c  lqr_ltv_track_test.c  model_test.c  model_test.cpp  planar_quadrotor.c  planar_quadrotor.h  setup_prob_test.c  setup_prob_test.cpp  test_utils.c  test_utils.h
tests/src/data/: back_pass_data.h  forward_pass_data.h  lqr_lti_track_data.h  lqr_ltv_data.h
